charts/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: predictive-basket
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
  selector:
    app: predictive-basket
