charts/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: predictive-basket.aicollaboration.com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - predictive-basket.aicollaboration.com
    secretName: tls-predictive-basket.aicollaboration.com
  rules:
  - host: predictive-basket.aicollaboration.com
    http:
      paths:
      - path: /
        backend:
          serviceName: predictive-basket
          servicePort: 5000
